<resources>
    <string name="app_name">Vinils_Mobile</string>
    <string name="title_albums">Albums</string>
    <string name="title_artists">Artists</string>
    <string name="title_collectors">Collectors</string>
    <string name="description_img_photo">Album Photo</string>
    <string name="description_artist_img_photo">Artist Photo</string>
    <string name="txt_no_artist_detail">Artist without Detail</string>
    <string name="title_artist_detail">Artist Detail</string>
    <string name="txt_no_album_detail">Album without details</string>
    <string name="title_album_details">Album Detail</string>
    <string name="content_description_media">Album Cover Image</string>
    <string name="album_description_placeholder">Album description</string>
    <string name="album_name_placeholder">Album Name</string>
    <string name="title_album_detail">Album Detail</string>
    <string name="icon_layout">Icon</string>
    <string name="icon_addItem">AddItem</string>
    <string name="text_track_name">track name</string>
    <string name="text_track_duration">track duration</string>
    <string name="text_add_new_track">Add new track to album</string>
    <string name="text_info_data_new_track">Enter the following data to add a new track</string>
    <string name="button_text_save">Save</string>
    <string name="text_album_tracks">Album Tracks</string>

    <string name="default_text">Haga clic en el botón para cargar información</string>
    <string name="post_text">Haga clic en el botón para crear un dato</string>
    <string name="fetch_label">Obtener coleccionistas</string>
    <string name="post_label">Crear coleccionista</string>
    <string name="id_hint">ID</string>
    <string name="name_hint">John Doe</string>
    <string name="phone_hint">3112223344</string>
    <string name="mail_hint">example@domain.com</string>
    <string name="action_switch_layout">Cambiar actividad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
