<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.TrackNewFragment">

    <TextView
        android:id="@+id/add_track_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_add_new_track"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/add_track_sub_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_info_data_new_track" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_track_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/track_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_track_duration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/track_duration_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save_track"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@android:color/holo_green_light"
        android:minHeight="52dp"
        android:text="@string/button_text_save" />

</LinearLayout>
