<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ico_albums"
        android:title="@string/title_albums"
        android:visible="true"
        app:showAsAction="never|withText">
     </item>
    <item
        android:id="@+id/ico_artists"
        android:title="@string/title_artists"
        android:visible="true"
        app:showAsAction="never|withText">
    </item>
    <item
        android:id="@+id/ico_collectors"
        android:title="@string/title_collectors"
        android:visible="true"
        app:showAsAction="never|withText">
    </item>

    <!--
    <item android:id="@+id/action_switch_layout"
        android:title="@string/action_switch_layout"
        app:showAsAction="always" />
    <item android:id="@+id/icon_layout"
        android:icon="@mipmap/icon"
        android:title="@string/icon_layout"
        android:orderInCategory="1"
        app:showAsAction="always" />

     -->
</menu>
